--- a/viewer/static/css/app.css
+++ b/viewer/static/css/app.css
@@ -6,8 +6,11 @@
 
 .tile:hover > .is-swap {
     visibility: visible;
+    opacity: 100%;
+    transition: opacity 100ms ease-in 100ms;
 }
 
 .tile > .is-swap {
     visibility: hidden;
+    opacity: 0;
 }
